...
      'Are you sure you want to leave this chat room? You will no longer receive messages from this conversation.';

  @override
  String get leaveRoomSuccess => 'Left the chat room';

  @override
  String get latest => 'Latest';

  @override
  String get trending => 'Trending';

  @override
  String get mostCommented => 'Most Discussed';
...
